tests/snapshots/dot_repeat_test__dot_across_lines.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 3

Buffer:
ello
orld
[e]st
