tests/snapshots/dot_repeat_test__dot_after_visual_change.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:3
Lines: 1

Buffer:
X X[t]wo three
