tests/snapshots/dot_repeat_test__dot_at_end_of_line.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:3
Lines: 1

Buffer:
hel[ ]
