tests/snapshots/dot_repeat_test__dot_override_original_count.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[u]r five six
