tests/snapshots/dot_repeat_test__dot_repeat_I_command.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:10
Lines: 2

Buffer:
START:hello
worlSTART:[d]
