tests/snapshots/dot_repeat_test__dot_repeat_J_join.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 2

Buffer:
line 1 line [l]ine 3
line 4
